fix color contrast

--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -7,7 +7,6 @@
     --primary-light-color: #fff;
     --primary-text-color: #000;
     --primary-grey-bg: #d7d7d7dd;
-    --accent-form-buttons: rgb(137, 155, 109);
 }
 
 * {
@@ -414,7 +413,7 @@ form textarea {
 }
 
 form button[type="submit"] {
-    background-color: var(--accent-form-buttons);
+    background-color: var(--primary-background-color);
     border: none;
     border-radius: 1rem;
     color: var(--primary-light-color);
@@ -481,7 +480,7 @@ form label small {
     font-weight: 500;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    background-color: var(--accent-form-buttons)
+    background-color: var(--primary-background-color)
 }
 
 .info-link:hover {
